apollo-federation/src/sources/connect/validation/snapshots/validation_tests@keys_and_entities__invalid__composite_key_doesnt_match.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/keys_and_entities/invalid/composite_key_doesnt_match.graphql
---
[
    Message {
        code: MissingEntityConnector,
        message: "Entity resolution for `@key(fields: \"id store { id country { key_id region } }\")` on `Product` is not implemented by a connector. See https://go.apollo.dev/connectors/directives/#rules-for-entity-true",
        locations: [
            17:14..17:71,
        ],
    },
]
