apollo-federation/src/sources/connect/validation/snapshots/validation_tests@keys_and_entities__invalid__entity_true_returning_non_null_type.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/keys_and_entities/invalid/entity_true_returning_non_null_type.graphql
---
[
    Message {
        code: EntityTypeInvalid,
        message: "`@connect(entity: true)` on `Query.user` is invalid. Entity connectors must return non-list, nullable, object types. See https://go.apollo.dev/connectors/entity-rules",
        locations: [
            8:7..8:19,
        ],
    },
]
