apollo-federation/src/sources/connect/validation/snapshots/validation_tests@keys_and_entities__invalid__unrelated_keys.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/keys_and_entities/invalid/unrelated_keys.graphql
---
[
    Message {
        code: MissingEntityConnector,
        message: "Entity resolution for `@key(fields: \"id\")` on `Store` is not implemented by a connector. See https://go.apollo.dev/connectors/directives/#rules-for-entity-true",
        locations: [
            21:12..21:30,
        ],
    },
]
